--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>로그인</title>
 </head>
 <body>
@@ -84,4 +86,15 @@
   a {
     color: #8a2be2;
   }
+  @media (max-width: 500px) {
+  input, button {
+    width: 90%;  /* 모바일에선 거의 전체 너비로 */
+  }
+
+  form {
+    width: 90%;
+    padding: 20px;
+  }
+}
+
 </style>
