--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>로그인</title>
 </head>
 <body>
-  <h1>🔑 로그인</h1>
+  <h1>🔑 로그인 테스트</h1>
   <form onsubmit="login(event)">
     <input type="text" id="username" placeholder="아이디" required><br>
     <input type="password" id="password" placeholder="비밀번호" required><br>
