--- a/index.html
+++ b/index.html
@@ -3,11 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>로그인</title>
+
+  <style>
+    body {
+      background-color: #111;
+      color: #eee;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    form {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 0 20px #8a2be2;
+      backdrop-filter: blur(10px);
+      text-align: center;
+      width: 300px;
+    }
+
+    input {
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #8a2be2;
+      border-radius: 8px;
+      background: #222;
+      color: #fff;
+      width: 90%;
+      box-sizing: border-box;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #8a2be2;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0 0 10px #8a2be2;
+      transition: 0.3s;
+      width: 90%;
+      box-sizing: border-box;
+    }
+
+    button:hover {
+      background-color: #a655ff;
+      box-shadow: 0 0 20px #a655ff;
+    }
+
+    a {
+      color: #8a2be2;
+    }
+
+    @media (max-width: 500px) {
+      form {
+        width: 90%;
+        padding: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>🔑 로그인 테스트</h1>
+  <h1>🔑 로그인</h1>
   <form onsubmit="login(event)">
     <input type="text" id="username" placeholder="아이디" required><br>
     <input type="password" id="password" placeholder="비밀번호" required><br>
@@ -33,68 +97,3 @@
   </script>
 </body>
 </html>
-
-<style>
-  body {
-    background-color: #111;
-    color: #eee;
-    font-family: 'Segoe UI', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-  }
-
-  form {
-    background: rgba(255, 255, 255, 0.05);
-    padding: 30px;
-    border-radius: 16px;
-    box-shadow: 0 0 20px #8a2be2;
-    backdrop-filter: blur(10px);
-    text-align: center;
-  }
-
-  input {
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #8a2be2;
-    border-radius: 8px;
-    background: #222;
-    color: #fff;
-    width: 200px;
-  }
-
-  button {
-    padding: 10px 20px;
-    background-color: #8a2be2;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: bold;
-    box-shadow: 0 0 10px #8a2be2;
-    transition: 0.3s;
-  }
-
-  button:hover {
-    background-color: #a655ff;
-    box-shadow: 0 0 20px #a655ff;
-  }
-
-  a {
-    color: #8a2be2;
-  }
-  @media (max-width: 500px) {
-  input, button {
-    width: 90%;  /* 모바일에선 거의 전체 너비로 */
-  }
-
-  form {
-    width: 90%;
-    padding: 20px;
-  }
-}
-
-</style>
