--- a/dashboard.html
+++ b/dashboard.html
@@ -2,63 +2,62 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>대시보드</title>
+  <style>
+    body {
+      background-color: #111;
+      color: #eee;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 0 20px #8a2be2;
+      backdrop-filter: blur(10px);
+      width: 300px;
+    }
+
+    h1 {
+      font-size: 1.8em;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1em;
+      color: #ccc;
+    }
+
+    @media (max-width: 500px) {
+      .card {
+        width: 90%;
+        padding: 20px;
+      }
+
+      h1 {
+        font-size: 1.5em;
+      }
+
+      p {
+        font-size: 0.95em;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>🎉 로그인 성공!</h1>
-  <p>회원가입과 로그인이 완료되었습니다.</p>
+  <div class="card">
+    <h1>🎉 로그인 성공!</h1>
+    <p>회원가입과 로그인이 완료되었습니다.</p>
+  </div>
 </body>
 </html>
-<style>
-  body {
-    background-color: #111;
-    color: #eee;
-    font-family: 'Segoe UI', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-  }
-
-  form {
-    background: rgba(255, 255, 255, 0.05);
-    padding: 30px;
-    border-radius: 16px;
-    box-shadow: 0 0 20px #8a2be2;
-    backdrop-filter: blur(10px);
-    text-align: center;
-  }
-
-  input {
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #8a2be2;
-    border-radius: 8px;
-    background: #222;
-    color: #fff;
-    width: 200px;
-  }
-
-  button {
-    padding: 10px 20px;
-    background-color: #8a2be2;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: bold;
-    box-shadow: 0 0 10px #8a2be2;
-    transition: 0.3s;
-  }
-
-  button:hover {
-    background-color: #a655ff;
-    box-shadow: 0 0 20px #a655ff;
-  }
-
-  a {
-    color: #8a2be2;
-  }
-</style>
