--- a/register.html
+++ b/register.html
@@ -15,6 +15,27 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      text-align: center;
+      padding: 20px;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 2rem;
+      color: #a973ff;
+      animation: fadeIn 1s ease-in-out 0.2s backwards;
     }
 
     form {
@@ -23,23 +44,43 @@
       border-radius: 16px;
       box-shadow: 0 0 20px #8a2be2;
       backdrop-filter: blur(10px);
-      text-align: center;
-      width: 300px;
+      width: 100%;
+      max-width: 320px;
+      box-sizing: border-box;
+      animation: fadeIn 1s ease-in-out 0.4s backwards;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+      text-align: left;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-size: 0.9rem;
+      color: #ccc;
     }
 
     input {
       padding: 10px;
-      margin: 10px 0;
       border: 1px solid #8a2be2;
       border-radius: 8px;
       background: #222;
       color: #fff;
-      width: 90%;
-      box-sizing: border-box;
+      width: 100%;
+      transition: all 0.3s ease;
+    }
+
+    input:focus {
+      border-color: #c39aff;
+      outline: none;
+      box-shadow: 0 0 8px #a973ff;
+      background-color: #1b1b1b;
     }
 
     button {
-      padding: 10px 20px;
+      padding: 12px;
       background-color: #8a2be2;
       color: white;
       border: none;
@@ -47,33 +88,38 @@
       cursor: pointer;
       font-weight: bold;
       box-shadow: 0 0 10px #8a2be2;
-      transition: 0.3s;
-      width: 90%;
-      box-sizing: border-box;
+      transition: background 0.3s, box-shadow 0.3s, transform 0.2s;
+      width: 100%;
     }
 
     button:hover {
       background-color: #a655ff;
       box-shadow: 0 0 20px #a655ff;
+      transform: translateY(-2px);
     }
 
-    a {
-      color: #8a2be2;
+    button:active {
+      transform: scale(0.98);
     }
 
     @media (max-width: 500px) {
       form {
-        width: 90%;
         padding: 20px;
       }
     }
   </style>
 </head>
 <body>
-  <h1>🔐 회원가입</h1>
+  <h1>📝 회원가입</h1>
   <form onsubmit="register(event)">
-    <input type="text" id="username" placeholder="아이디" required><br>
-    <input type="password" id="password" placeholder="비밀번호" required><br>
+    <div class="form-group">
+      <label for="username">아이디</label>
+      <input type="text" id="username" placeholder="아이디" required />
+    </div>
+    <div class="form-group">
+      <label for="password">비밀번호</label>
+      <input type="password" id="password" placeholder="비밀번호" required />
+    </div>
     <button type="submit">가입하기</button>
   </form>
 
@@ -83,11 +129,10 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      // LocalStorage에 저장
       localStorage.setItem("user_" + username, password);
 
       alert("회원가입 완료!");
-      window.location.href = "index.html";  // 로그인 페이지로 이동
+      window.location.href = "index.html"; // 로그인 페이지로 이동
     }
   </script>
 </body>
