--- a/signup3.html
+++ b/signup3.html
@@ -82,6 +82,24 @@
       font-size: 0.95rem;
       margin-top: 5px;
     }
+    h1 {
+    color: #39ff14;
+    margin-bottom: 20px;
+    text-shadow: 0 0 4px #39ff14;
+    font-size: 1.8rem;
+    text-align: center;
+    }
+
+    @media (max-width: 480px) {
+    h1 {
+        font-size: 1.4rem;
+    }
+
+    .signup-box {
+        width: 90%;
+    }
+    }
+
   </style>
 </head>
 <body>
