--- a/signup3.html
+++ b/signup3.html
@@ -103,7 +103,7 @@
   </style>
 </head>
 <body>
-  <h1>🕹️ PixelPlay 회원가입</h1>
+  <h1>🕹️ PixelPlay 회원가입 테</h1>
 
   <div class="signup-box">
     <input type="text" id="newId" placeholder="아이디 입력" />
