--- a/success1.html
+++ b/success1.html
@@ -104,9 +104,9 @@
 </head>
 <body>
   <div class="success-box">
-    <h1>✅ 로그인 완료!</h1>
+    <h1>로그인 완료</h1>
     <p>GreenShop에 오신 것을 환영합니다!<br/>즐거운 쇼핑 되세요 😊</p>
-    <a href="index.html" class="home-button">🏠 홈으로 돌아가기</a>
+    <a href="index.html" class="home-button">홈으로 돌아가기</a>
   </div>
 
   <script>
