--- a/success3.html
+++ b/success3.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="success-box">
-    <h1>✅ 로그인 성공!</h1>
+    <h1>로그인 성공</h1>
     <p>PixelPlay에 오신 걸 환영합니다!<br>즐겁게 플레이하세요 🎮</p>
     <a href="index.html" class="home-button">🏠 홈 화면으로</a>
   </div>
